ACS-11060 Use newCachedThreadPool instead of newVirtualThreadPerTaskExecutor